Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -134,7 +134,7 @@
   "mn1:28-49.20": "એકતાને એકતા …",
   "mn1:28-49.21": "વિવિધતાને વિવિધતા …",
   "mn1:28-49.22": "સર્વને સર્વ …",
-  "mn1:28-49.23": "નિર્વાણને નિર્વાણ સરખી રીતે જાણતો હોય છે;",
+  "mn1:28-49.23": "નિર્વાણને નિર્વાણ સરખી રીતે જાણે છે;",
   "mn1:50.1": "પરંતુ નિર્વાણને નિર્વાણ સમજ઼ી એમણે પોતાને નિર્વાણ ના માનવું જોઇએ, પોતાને નિર્વાણમાં ના માનવું જોઈએ, પોતાને નિર્વાણથી ના માનવું જોઇએ, નિર્વાણ મારું છે એવું ના માનવું જોઇએ, નિર્વાણમાં આનંદ ના લેવો જોઇએ.",
   "mn1:50.2": "એ શેના માટે?",
   "mn1:50.3": "એમને સંપૂર્ણ઼પણે સમજ઼ાય એના માટે, કહું છું.",
