--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -151,5 +151,6 @@
   "mn1:52-74.6": "પ્રજાપતિને પ્રજાપતિ …",
   "mn1:52-74.7": "બ્રહ્માને બ્રહ્મા …",
   "mn1:52-74.8": "આભાસર દેવોને અભાસર દેવો …",
-  "mn1:52-74.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …"
+  "mn1:52-74.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …",
+  "mn1:52-74.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …"
 }
