--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -161,5 +161,6 @@
   "mn1:52-74.16": "જોએલાને જોએલું …",
   "mn1:52-74.17": "સાંભળ્યાને સાંભળ્યુ …",
   "mn1:52-74.18": "ખ્યાલ કરેલાને ખ્યાલ કરેલુ …",
-  "mn1:52-74.19": "જાણેલાને જાણેલુ …"
+  "mn1:52-74.19": "જાણેલાને જાણેલુ …",
+  "mn1:52-74.20": "એકતાને એકતા …"
 }
