Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -162,5 +162,6 @@
   "mn1:52-74.17": "સાંભળ્યાને સાંભળ્યુ …",
   "mn1:52-74.18": "ખ્યાલ કરેલાને ખ્યાલ કરેલુ …",
   "mn1:52-74.19": "જાણેલાને જાણેલુ …",
-  "mn1:52-74.20": "એકતાને એકતા …"
+  "mn1:52-74.20": "એકતાને એકતા …",
+  "mn1:52-74.21": "વિવિધતાને વિવિધતા …"
 }
