Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -169,5 +169,6 @@
   "mn1:52-74.24": "પરંતુ નિર્વાણને નિર્વાણ તરીકે જાણી એઓ પોતાને નિર્વાણ નથી માનતા, પોતાને નિર્વાણમાં નથી માનતા, પોતાને નિર્વાણથી નથી માનતા, નિર્વાણ મારું છે એવું નથી માનતા, નિર્વાણમાં આનંદ નથી લેતા.",
   "mn1:52-74.25": "એ શેના માટે?",
   "mn1:52-74.26": "એમને સંપૂર્ણ઼પણે સમજ઼ાયુ છે એટલે, કહું છું.",
-  "mn1:52-74.27": "અરહંતની ત્રીજી ભૂમિપરિચ્છેદની પૂર્ણતા "
+  "mn1:52-74.27": "અરહંતની ત્રીજી ભૂમિપરિચ્છેદની પૂર્ણતા ",
+  "mn1:75.1": "ભિક્ષુઓ, જે ભિક્ષુ અશુધ્ધિઓના અંત દ્વારા અ૨હંત થયા છે, જેમણે ધાર્મિક જીવન જીવ્યું છે, જે કરવાનુ હતું તે કર્યું છે, બોજ઼ મૂકી દીધો છે, પોતાનો ધ્યેય સિધ્ધ કર્યો છે, અસ્તિત્વના બંધનનો સંપૂર્ણપણે વિનાશ કર્યો છે, જે સમ્મજ્ઞાન દ્વારા સંપૂર્ણપણે મુક્ત થયા છે એઓ પણ પૃથ્વીને પૃથ્વી તરીકે જાણતા હોય છે;"
 }
