Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -182,5 +182,6 @@
   "mn1:76-98.6": "પ્રજાપતિને પ્રજાપતિ …",
   "mn1:76-98.7": "બ્રહ્માને બ્રહ્મા …",
   "mn1:76-98.8": "આભાસર દેવોને અભાસર દેવો …",
-  "mn1:76-98.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …"
+  "mn1:76-98.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …",
+  "mn1:76-98.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …"
 }
