--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -187,5 +187,6 @@
   "mn1:76-98.11": "અભિભૂ દેવોને અભિભૂ દેવો …",
   "mn1:76-98.12": "અનંત આકાશના સ્થાનને અનંત આકાશનું સ્થાન …",
   "mn1:76-98.13": "અનંત ચેતનાના સ્થાનને અનંત ચેતનાનું સ્થાન …",
-  "mn1:76-98.14": "સર્વઅભાવના સ્થાનને  સર્વઅભાવનુ સ્થાન …"
+  "mn1:76-98.14": "સર્વઅભાવના સ્થાનને  સર્વઅભાવનુ સ્થાન …",
+  "mn1:76-98.15": "સંજ્ઞાન કે અસંજ્ઞાનના અભાવના સ્થાનને સંજ્ઞાન કે અસંજ્ઞાનના અભાવનું સ્થાન …"
 }
