--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -192,5 +192,6 @@
   "mn1:76-98.16": "જોએલાને જોએલું …",
   "mn1:76-98.17": "સાંભળ્યાને સાંભળ્યુ …",
   "mn1:76-98.18": "ખ્યાલ કરેલાને ખ્યાલ કરેલુ …",
-  "mn1:76-98.19": "જાણેલાને જાણેલુ …"
+  "mn1:76-98.19": "જાણેલાને જાણેલુ …",
+  "mn1:76-98.20": "એકતાને એકતા …"
 }
