--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn56.41:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf, im Bambuswäldchen, am Futterplatz der Eichhörnchen. ",
   "sn56.41:1.2": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
   "sn56.41:1.3": "„Es war einmal ein gewisser Mann, Mönche und Nonnen, der verließ Rājagaha im Gedanken: ‚Ich will über die Welt spekulieren.‘ Er ging zum Lotusteich von Sumāgadhā, setzte sich ans Ufer und spekulierte über die Welt. ",
-  "sn56.41:1.4": "Da sah dieser Mann ein Heer aus vier Abteilungen, das in einen Lotusstängel einmarschierte. "
+  "sn56.41:1.4": "Da sah dieser Mann ein Heer aus vier Abteilungen, das in einen Lotusstängel einmarschierte. ",
+  "sn56.41:1.5": "Bei diesem Anblick dachte er: "
 }
