--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -214,5 +214,6 @@
   "mn1:100-122.7": "બ્રહ્માને બ્રહ્મા …",
   "mn1:100-122.8": "આભાસર દેવોને અભાસર દેવો …",
   "mn1:100-122.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …",
-  "mn1:100-122.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …"
+  "mn1:100-122.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …",
+  "mn1:100-122.11": "અભિભૂ દેવોને અભિભૂ દેવો …"
 }
