--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn56.41:1.4": "Da sah dieser Mann ein Heer aus vier Abteilungen, das in einen Lotusstängel einmarschierte. ",
   "sn56.41:1.5": "Bei diesem Anblick dachte er: ",
   "sn56.41:1.6": "‚Ich bin verrückt geworden, wirklich, ich habe den Verstand verloren! ",
-  "sn56.41:1.7": "Ich sehe Dinge, die es in der Welt nicht gibt!‘ "
+  "sn56.41:1.7": "Ich sehe Dinge, die es in der Welt nicht gibt!‘ ",
+  "sn56.41:2.1": "Darauf betrat der Mann die Stadt und unterrichtete eine große Menge: "
 }
