--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -217,5 +217,6 @@
   "mn1:100-122.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …",
   "mn1:100-122.11": "અભિભૂ દેવોને અભિભૂ દેવો …",
   "mn1:100-122.12": "અનંત આકાશના સ્થાનને અનંત આકાશનું સ્થાન …",
-  "mn1:100-122.13": "અનંત ચેતનાના સ્થાનને અનંત ચેતનાનું સ્થાન …"
+  "mn1:100-122.13": "અનંત ચેતનાના સ્થાનને અનંત ચેતનાનું સ્થાન …",
+  "mn1:100-122.14": "સર્વઅભાવના સ્થાનને  સર્વઅભાવનુ સ્થાન …"
 }
