--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -223,5 +223,6 @@
   "mn1:100-122.16": "જોએલાને જોએલું …",
   "mn1:100-122.17": "સાંભળ્યાને સાંભળ્યુ …",
   "mn1:100-122.18": "ખ્યાલ કરેલાને ખ્યાલ કરેલુ …",
-  "mn1:100-122.19": "જાણેલાને જાણેલુ …"
+  "mn1:100-122.19": "જાણેલાને જાણેલુ …",
+  "mn1:100-122.20": "એકતાને એકતા …"
 }
