--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -231,5 +231,5 @@
   "mn1:100-122.24": "પરંતુ નિર્વાણને પ્રત્યક્ષ રીતે નિર્વાણ તરીકે જાણી તેઓ પોતાને નિર્વાણ નથી માનતા, પોતાને નિર્વાણમાં નથી માનતા, પોતાને નિર્વાણથી નથી માનતા, નિર્વાણ મારું છે એવું નથી માનતા, નિર્વાણમાં આનંદ નથી લેતા.",
   "mn1:100-122.25": "એ શેના માટે?",
   "mn1:100-122.26": "કારણકે તેઓ દ્વેષના અંતને લીધે દ્વેષથી મુક્ત છે.",
-  "mn1:100-122.27": "અરહંતની પાંચમી ભૂમિપરિચ્છેદની પૂર્ણતા "
+  "mn1:100-122.27": "અરહંતની પાંચમી ભૂમિપરિચ્છેદની પૂર્ણતા."
 }
