--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -244,5 +244,7 @@
   "mn1:124-146.6": "પ્રજાપતિને પ્રજાપતિ …",
   "mn1:124-146.7": "બ્રહ્માને બ્રહ્મા …",
   "mn1:124-146.8": "આભાસર દેવોને અભાસર દેવો …",
-  "mn1:124-146.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …"
+  "mn1:124-146.9": "સંદીપ્યમાન દેવોને સંદીપ્યમાન દેવો …",
+  "mn1:124-146.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …",
+  "mn1:124-146.11": "અભિભૂ દેવોને અભિભૂ દેવો …"
 }
