--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -248,5 +248,6 @@
   "mn1:124-146.10": "મહાફળધારિ દેવોને મહાફળધારિ દેવો …",
   "mn1:124-146.11": "અભિભૂ દેવોને અભિભૂ દેવો …",
   "mn1:124-146.12": "અનંત આકાશના સ્થાનને અનંત આકાશનું સ્થાન …",
-  "mn1:124-146.13": "અનંત ચેતનાના સ્થાનને અનંત ચેતનાનું સ્થાન …"
+  "mn1:124-146.13": "અનંત ચેતનાના સ્થાનને અનંત ચેતનાનું સ્થાન …",
+  "mn1:124-146.14": "સર્વઅભાવના સ્થાનને  સર્વઅભાવનુ સ્થાન …"
 }
