--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn56.41:2.1": "Darauf betrat der Mann die Stadt und unterrichtete eine große Menge: ",
   "sn56.41:2.2": "‚Ich bin verrückt geworden, wirklich, ich habe den Verstand verloren! ",
   "sn56.41:2.3": "Ich sehe Dinge, die es in der Welt nicht gibt!‘ ",
-  "sn56.41:2.4": "‚Aber wie bist du verrückt geworden? Wie hast du den Verstand verloren? "
+  "sn56.41:2.4": "‚Aber wie bist du verrückt geworden? Wie hast du den Verstand verloren? ",
+  "sn56.41:2.5": "Und was hast du gesehen, das es in der Welt nicht gibt?‘ "
 }
