--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn56.41:2.4": "‚Aber wie bist du verrückt geworden? Wie hast du den Verstand verloren? ",
   "sn56.41:2.5": "Und was hast du gesehen, das es in der Welt nicht gibt?‘ ",
   "sn56.41:2.6": "‚Ihr Herren, ich habe Rājagaha verlassen im Gedanken: ‚Ich will über die Welt spekulieren.‘ Ich bin zum Lotusteich von Sumāgadhā gegangen, habe mich ans Ufer gesetzt und über die Welt spekuliert. ",
-  "sn56.41:2.7": "Da sah ich ein Heer aus vier Abteilungen, das in einen Lotusstängel einmarschierte. "
+  "sn56.41:2.7": "Da sah ich ein Heer aus vier Abteilungen, das in einen Lotusstängel einmarschierte. ",
+  "sn56.41:2.8": "So bin ich verrückt geworden, so habe ich den Verstand verloren. "
 }
