Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -18,6 +18,6 @@
   "sn56.41:2.7": "Da sah ich ein Heer aus vier Abteilungen, das in einen Lotusstängel einmarschierte. ",
   "sn56.41:2.8": "So bin ich verrückt geworden, so habe ich den Verstand verloren. ",
   "sn56.41:2.9": "Und das habe ich gesehen, das es in der Welt nicht gibt.‘ ",
-  "sn56.41:2.10": "‚Nun, guter Mann, du bist gewiss verrückt geworden, du hast gewiss den Verstand verloren. ",
+  "sn56.41:2.10": "‚Nun, guter Mann, du bist tatsächlich verrückt geworden, du hast tatsächlich den Verstand verloren. ",
   "sn56.41:2.11": "Und du siehst Dinge, die es in der Welt nicht gibt.‘ "
 }
