--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -20,5 +20,6 @@
   "sn56.41:2.9": "Und das habe ich gesehen, das es in der Welt nicht gibt.‘ ",
   "sn56.41:2.10": "‚Nun, guter Mann, du bist tatsächlich verrückt geworden, du hast tatsächlich den Verstand verloren. ",
   "sn56.41:2.11": "Und du siehst Dinge, die es in der Welt nicht gibt.‘ ",
-  "sn56.41:3.1": "Aber was dieser Mann sah, war wirklich, nicht unwirklich. "
+  "sn56.41:3.1": "Aber was dieser Mann sah, war wirklich, nicht unwirklich. ",
+  "sn56.41:3.2": "Es war einmal eine Schlacht, die wurde zwischen den Göttern und den Dämonen ausgefochten. "
 }
