--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn56.41:3.1": "Aber was dieser Mann sah, war wirklich, nicht unwirklich. ",
   "sn56.41:3.2": "Es war einmal eine Schlacht, die wurde zwischen den Göttern und den Dämonen ausgefochten. ",
   "sn56.41:3.3": "In dieser Schlacht siegten die Götter, und die Dämonen verloren. ",
-  "sn56.41:3.4": "Geschlagen und in Panik flohen die Dämonen durch einen Lotusstängel in die Dämonenburg, um die Götter zu täuschen. "
+  "sn56.41:3.4": "Geschlagen und in Panik flohen die Dämonen durch einen Lotusstängel in die Dämonenburg, um die Götter zu täuschen. ",
+  "sn56.41:4.1": "Daher, Mönche und Nonnen, spekuliert nicht über die Welt, wie etwa: "
 }
