Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -25,5 +25,5 @@
   "sn56.41:3.3": "In dieser Schlacht siegten die Götter, und die Dämonen verloren. ",
   "sn56.41:3.4": "Geschlagen und in Panik flohen die Dämonen durch einen Lotusstängel in die Dämonenburg, um die Götter zu täuschen. ",
   "sn56.41:4.1": "Daher, Mönche und Nonnen, spekuliert nicht über die Welt, wie etwa: ",
-  "sn56.41:4.2": "‚Das Weltall ist ewig, es ist nicht ewig, es ist endlich oder es ist unendlich; Seele und Körper sind dasselbe oder Seele und Körper sind verschiedene Dinge; ein Klargewordener besteht nach dem Tod fort, er besteht nach dem Tod nicht fort, er besteht nach dem Tod fort und besteht auch nicht fort, oder weder besteht er nach dem Tod fort, noch besteht er nicht fort. "
+  "sn56.41:4.2": "Das Weltall ist ewig, es ist nicht ewig, es ist endlich oder es ist unendlich; Seele und Körper sind dasselbe oder Seele und Körper sind verschiedene Dinge; ein Klargewordener besteht nach dem Tod fort, er besteht nach dem Tod nicht fort, er besteht nach dem Tod fort und besteht auch nicht fort, oder weder besteht er nach dem Tod fort, noch besteht er nicht fort. "
 }
