--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn56.41:4.2": "Das Weltall ist ewig, es ist nicht ewig, es ist endlich oder es ist unendlich; Seele und Körper sind dasselbe oder Seele und Körper sind verschiedene Dinge; ein Klargewordener besteht nach dem Tod fort, er besteht nach dem Tod nicht fort, er besteht nach dem Tod fort und besteht auch nicht fort, oder weder besteht er nach dem Tod fort, noch besteht er nicht fort. ",
   "sn56.41:4.3": "Und warum nicht? ",
   "sn56.41:4.4": "Weil diese Vorstellungen nicht zum Segen und von Bedeutung für die Grundlagen des geistlichen Lebens sind. Sie führen nicht zu Ernüchterung, Sichabwenden, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen. ",
-  "sn56.41:5.1": "Wenn ihr etwas ausdenkt, solltet ihr denken: ‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘ "
+  "sn56.41:5.1": "Wenn ihr etwas ausdenkt, solltet ihr denken: ‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘ ",
+  "sn56.41:5.2": "Und warum? "
 }
