--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.41_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn56.41:4.3": "Und warum nicht? ",
   "sn56.41:4.4": "Weil diese Vorstellungen nicht zum Segen und von Bedeutung für die Grundlagen des geistlichen Lebens sind. Sie führen nicht zu Ernüchterung, Sichabwenden, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen. ",
   "sn56.41:5.1": "Wenn ihr etwas ausdenkt, solltet ihr denken: ‚Das ist das Leiden.‘ … ‚Das ist der Ursprung des Leidens.‘ … ‚Das ist das Aufhören des Leidens.‘ … ‚Das ist die Übung, die zum Aufhören des Leidens führt.‘ ",
-  "sn56.41:5.2": "Und warum? "
+  "sn56.41:5.2": "Und warum? ",
+  "sn56.41:5.3": "Weil diese Vorstellungen zum Segen und von Bedeutung für die Grundlagen des geistlichen Lebens sind. Sie führen zu Ernüchterung, Sichabwenden, Aufhören, Frieden, Einsicht, Erwachen und Erlöschen. "
 }
