Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -671,6 +671,7 @@
   "sn-name:2043.sn56.40": "Auf ein Streitgespräch aus ",
   "sn-name:2044.sn56-papatavagga": "Eine Klippe ",
   "sn-name:2045.sn56.41": "Spekulationen über die Welt ",
+  "sn-name:2046.sn56.42": "Eine Klippe ",
   "sn-name:2050.sn56.46": "Dunkelheit ",
   "sn-name:2051.sn56.47": "Ein Joch mit einer Öffnung (1) ",
   "sn-name:2052.sn56.48": "Ein Joch mit einer Öffnung (2) ",
