--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn56.42:0.1": "Verbundene Lehrreden 56 ",
   "sn56.42:0.2": "5. Eine Klippe ",
-  "sn56.42:0.3": "42. Eine Klippe "
+  "sn56.42:0.3": "42. Eine Klippe ",
+  "sn56.42:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. "
 }
