Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn56.42:0.1": "Verbundene Lehrreden 56 ",
   "sn56.42:0.2": "5. Eine Klippe ",
   "sn56.42:0.3": "42. Eine Klippe ",
-  "sn56.42:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. "
+  "sn56.42:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. ",
+  "sn56.42:1.2": "Da wandte sich der Buddha an die Mönche und Nonnen: "
 }
