--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.42:0.2": "5. Eine Klippe ",
   "sn56.42:0.3": "42. Eine Klippe ",
   "sn56.42:1.1": "Einmal hielt sich der Buddha bei Rājagaha auf der Geierkuppe auf. ",
-  "sn56.42:1.2": "Da sagte der Buddha zu den Mönchen und Nonnen: "
+  "sn56.42:1.2": "Da sagte der Buddha zu den Mönchen und Nonnen: ",
+  "sn56.42:1.3": "„Kommt, Mönche und Nonnen, wir wollen zum Erkenntnisgrat gehen, um den Tag über dort zu meditieren. "
 }
