Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1443,6 +1443,9 @@
   "pli-tv-kd2:36.4.15": "May-not-stay-apart zone; ",
   "pli-tv-kd2:36.4.16": "May designate, the first monastery zone, ",
   "pli-tv-kd2:36.4.17": "May abolish the latter monastery zone. ",
+  "pli-tv-kd2:36.4.18": "Non-established zones of inhabited areas, ",
+  "pli-tv-kd2:36.4.19": "In a river, in the ocean, in a lake; ",
+  "pli-tv-kd2:36.4.20": "A splash of water, they made overlap, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
