Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1446,6 +1446,10 @@
   "pli-tv-kd2:36.4.18": "Non-established zones of inhabited areas, ",
   "pli-tv-kd2:36.4.19": "In a river, in the ocean, in a lake; ",
   "pli-tv-kd2:36.4.20": "A splash of water, they made overlap, ",
+  "pli-tv-kd2:36.4.21": "And just so they enclosed. ",
+  "pli-tv-kd2:36.4.22": "How many procedures, recitation, ",
+  "pli-tv-kd2:36.4.23": "Primitive tribes, and even when not existing; ",
+  "pli-tv-kd2:36.4.24": "A teaching, Monastic Law, they made threats, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
