--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1450,6 +1450,11 @@
   "pli-tv-kd2:36.4.22": "How many procedures, recitation, ",
   "pli-tv-kd2:36.4.23": "Primitive tribes, and even when not existing; ",
   "pli-tv-kd2:36.4.24": "A teaching, Monastic Law, they made threats, ",
+  "pli-tv-kd2:36.4.25": "Again threatening in regard to the Monastic Law. ",
+  "pli-tv-kd2:36.4.26": "Accusing, when permission is given, ",
+  "pli-tv-kd2:36.4.27": "Objecting to what is illegitimate; ",
+  "pli-tv-kd2:36.4.28": " Four or five and others state, ",
+  "pli-tv-kd2:36.4.29": "Also if deliberately, in regard to effort. ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
