Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1455,6 +1455,8 @@
   "pli-tv-kd2:36.4.27": "Objecting to what is illegitimate; ",
   "pli-tv-kd2:36.4.28": " Four or five and others state, ",
   "pli-tv-kd2:36.4.29": "Also if deliberately, in regard to effort. ",
+  "pli-tv-kd2:36.4.30": "Included lay people, without being asked, ",
+  "pli-tv-kd2:36.4.31": "They did not know at Codanā; ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
