Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1457,6 +1457,10 @@
   "pli-tv-kd2:36.4.29": "Also if deliberately, in regard to effort. ",
   "pli-tv-kd2:36.4.30": "Included lay people, without being asked, ",
   "pli-tv-kd2:36.4.31": "They did not know at Codanā; ",
+  "pli-tv-kd2:36.4.32": "A number did not know, ",
+  "pli-tv-kd2:36.4.33": "Straightaway, and would not go. ",
+  "pli-tv-kd2:36.4.34": "Which, how many, faraway,",
+  "pli-tv-kd2:36.4.35": "And to announce, forgot; ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
