Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1461,6 +1461,10 @@
   "pli-tv-kd2:36.4.33": "Straightaway, and would not go. ",
   "pli-tv-kd2:36.4.34": "Which, how many, faraway,",
   "pli-tv-kd2:36.4.35": "And to announce, forgot; ",
+  "pli-tv-kd2:36.4.36": "Dirty, seat, lamp, ",
+  "pli-tv-kd2:36.4.37": "Regions, another who is learned. ",
+  "pli-tv-kd2:36.4.38": "Straightaway, rainy season, observance day, ",
+  "pli-tv-kd2:36.4.39": "And purity procedure, relatives; ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
