Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -9,5 +9,5 @@
   "sn56.42:1.5": "Da ging der Buddha zusammen mit mehreren Mönchen zum Erkenntnisgrat. ",
   "sn56.42:1.6": "Ein Mönch sah dort eine große Klippe ",
   "sn56.42:1.7": "und sagte zum Buddha: ",
-  "sn56.42:1.8": "„Herr, diese große Klippe ist wirklich riesig und äußerst furchterregend. "
+  "sn56.42:1.8": "„Herr, diese große Klippe ist wirklich gewaltig und schrecklich. "
 }
