--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn56.42:1.6": "Ein Mönch sah dort eine große Klippe ",
   "sn56.42:1.7": "und sagte zum Buddha: ",
   "sn56.42:1.8": "„Herr, diese große Klippe ist wirklich gewaltig und schrecklich. ",
-  "sn56.42:1.9": "Gibt es eine andere Klippe, die noch gewaltiger und schrecklicher ist als diese?“ "
+  "sn56.42:1.9": "Gibt es eine andere Klippe, die noch gewaltiger und schrecklicher ist als diese?“ ",
+  "sn56.42:1.10": "„Die gibt es, Mönch.“ "
 }
