--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn56.42:1.7": "und sagte zum Buddha: ",
   "sn56.42:1.8": "„Herr, diese große Klippe ist wirklich gewaltig und schrecklich. ",
   "sn56.42:1.9": "Gibt es eine andere Klippe, die noch gewaltiger und schrecklicher ist als diese?“ ",
-  "sn56.42:1.10": "„Die gibt es, Mönch.“ "
+  "sn56.42:1.10": "„Die gibt es, Mönch.“ ",
+  "sn56.42:2.1": "„Aber Herr, was ist das?“ "
 }
