--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn56.42:1.9": "Gibt es eine andere Klippe, die noch gewaltiger und schrecklicher ist als diese?“ ",
   "sn56.42:1.10": "„Die gibt es, Mönch.“ ",
   "sn56.42:2.1": "„Aber Herr, was ist das?“ ",
-  "sn56.42:2.2": "„Mönch, es gibt Asketen und Brahmanen, die nicht wahrhaftig verstehen, was das Leiden ist, was der Ursprung des Leidens ist, was das Aufhören des Leidens ist und was die Übung ist, die zum Aufhören des Leidens führt. "
+  "sn56.42:2.2": "„Mönch, es gibt Asketen und Brahmanen, die nicht wahrhaftig verstehen, was das Leiden ist, was der Ursprung des Leidens ist, was das Aufhören des Leidens ist und was die Übung ist, die zum Aufhören des Leidens führt. ",
+  "sn56.42:2.3": "Sie finden Vergnügen an Entscheidungen, die zu Wiedergeburt, Alter und Tod führen, zu Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
 }
