--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn56.42:2.3": "Sie finden Vergnügen an Entscheidungen, die zu Wiedergeburt führen, zu Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
   "sn56.42:2.4": "Da sie daran Vergnügen finden, treffen sie fortgesetzt solche Entscheidungen. ",
   "sn56.42:2.5": "Wenn sie Entscheidungen getroffen haben, die zu Wiedergeburt führen, zu Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis, stürzen sie Klippe der Wiedergeburt hinab, die Klippe von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
-  "sn56.42:2.6": "Sie sind nicht befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
+  "sn56.42:2.6": "Sie sind nicht befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
+  "sn56.42:2.7": "Sie sind nicht befreit vom Leiden, sage ich. "
 }
