--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.42_translation-de-sabbamitta.json
@@ -23,5 +23,6 @@
   "sn56.42:3.2": "Sie finden kein Vergnügen an Entscheidungen, die zu Wiedergeburt führen, zu Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
   "sn56.42:3.3": "Da sie daran kein Vergnügen finden, hören sie auf, solche Entscheidungen zu treffen. ",
   "sn56.42:3.4": "Wenn sie aufgehört haben, Entscheidungen zu treffen, die zu Wiedergeburt führen, zu Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis, stürzen sie nicht die Klippe der Wiedergeburt hinab, die Klippe von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
-  "sn56.42:3.5": "Sie sind befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. "
+  "sn56.42:3.5": "Sie sind befreit von Wiedergeburt, von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
+  "sn56.42:3.6": "Sie sind befreit vom Leiden, sage ich. "
 }
