Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.43:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.43:0.2": "5. Eine Klippe "
+  "sn56.43:0.2": "5. Eine Klippe ",
+  "sn56.43:0.3": "43. Das große Fieber "
 }
