--- a/translation/de/blurb/sn-blurbs_translation-de.json
+++ b/translation/de/blurb/sn-blurbs_translation-de.json
@@ -222,7 +222,7 @@
   "sn-blurbs:sn56.40": "Wenn ihr fest in den vier edlen Wahrheiten verankert seid, kann euch niemand widerlegen. ",
   "sn-blurbs:sn56.41": "Der Buddha erzählt die seltsame Geschichte von einem Mann, der sich an einen Lotusteich setzt, um über die Welt zu spekulieren, und ein Heer sieht, das in einen Lotusstängel hineinmarschiert. Er denkt, er werde verrückt. Doch der Buddha sagt nein, das Heer sei wirklich. Dennoch solle man nicht über solche Dinge spekulieren, sondern über die vier edlen Wahrheiten nachdenken. ",
   "sn-blurbs:sn56.42": "Der Buddha nimmt die Mönche mit zu einem steilen Abhang und erklärt, dass die, die die vier edlen Wahrheiten nicht verstehen, in einen noch tieferen Abgrund stürzen. ",
-  "sn-blurbs:sn56.43": "Der Buddha spricht von einer Hölle, die großes Fieber genannt wird, und erklärt, dass die, die die vier edlen Wahrheiten nicht verstehen, ein noch grimmigeres Fieber erleben werden. ",
+  "sn-blurbs:sn56.43": "Der Buddha spricht von einer Hölle, die großes Fieber genannt wird, und erklärt, dass die, die die vier edlen Wahrheiten nicht verstehen, ein noch grimmigeres Fieber durchleiden werden. ",
   "sn-blurbs:sn56.46": "Der interstellare Raum ist dunkel und leer; doch wenn man die vier edlen Wahrheiten nicht sieht, ist das noch schlimmer. ",
   "sn-blurbs:sn56.47": "Eine einäugige Schildkröte würde eher ihren Kopf durch eine Öffnung in einem Joch stecken, das auf dem Meer treibt, als dass jemand aus einem niederen Bereich als Mensch wiedergeboren wird. ",
   "sn-blurbs:sn56.48": "Eine einäugige Schildkröte würde eher ihren Kopf durch eine Öffnung in einem Joch stecken, das auf dem Meer treibt, als dass jemand aus einem niederen Bereich als Mensch wiedergeboren wird. ",
