--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn56.43:0.2": "5. Eine Klippe ",
   "sn56.43:0.3": "43. Das große Fieber ",
   "sn56.43:1.1": "„Mönche und Nonnen, es gibt eine Hölle, die ‚das große Fieber‘ genannt wird. ",
-  "sn56.43:1.2": "Dort ist jedes Bild, das man mit dem Auge sieht, unerwünscht, nicht erwünscht, unwillkommen, nicht willkommen, unangenehm, nicht angenehm. "
+  "sn56.43:1.2": "Dort ist jedes Bild, das man mit dem Auge sieht, unerwünscht, nicht erwünscht, unwillkommen, nicht willkommen, unangenehm, nicht angenehm. ",
+  "sn56.43:1.3": "Jeder Ton, den man mit dem Ohr hört … jeder Duft, den man mit der Nase riecht … jeder Geschmack, den man mit der Zunge schmeckt … "
 }
