--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -6,5 +6,5 @@
   "sn56.43:1.2": "Dort ist jedes Bild, das man mit dem Auge sieht, unerwünscht, nicht erwünscht, unwillkommen, nicht willkommen, unangenehm, nicht angenehm. ",
   "sn56.43:1.3": "Jeder Ton, den man mit dem Ohr hört … Jeder Duft, den man mit der Nase riecht … Jeder Geschmack, den man mit der Zunge schmeckt … ",
   "sn56.43:1.4": "Jede Berührung, die man mit dem Körper empfindet … ",
-  "sn56.43:1.5": "Jeder Gedanke, den man mit dem Geist erkennt, ist unerwünscht, nicht erwünscht, unwillkommen, nicht willkommen, unangenehm, nicht angenehm. "
+  "sn56.43:1.5": "Jeder Gedanke, den man mit dem Geist erkennt, ist unerwünscht, nicht erwünscht, unwillkommen, nicht willkommen, unangenehm, nicht angenehm.“ "
 }
