--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn56.43:1.5": "Jeder Gedanke, den man mit dem Geist erkennt, ist unerwünscht, nicht erwünscht, unwillkommen, nicht willkommen, unangenehm, nicht angenehm.“ ",
   "sn56.43:2.1": "Daraufhin sagte eine der Nonnen zum Buddha: ",
   "sn56.43:2.2": "„Herr, dieses Fieber ist wirklich gewaltig, so überaus gewaltig. ",
-  "sn56.43:2.3": "Gibt es ein anderes Fieber, das noch gewaltiger und schrecklicher ist als dieses?“ "
+  "sn56.43:2.3": "Gibt es ein anderes Fieber, das noch gewaltiger und schrecklicher ist als dieses?“ ",
+  "sn56.43:2.4": "„Die gibt es, Nonne.“ "
 }
