Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.43_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn56.43:2.1": "Daraufhin sagte eine der Nonnen zum Buddha: ",
   "sn56.43:2.2": "„Herr, dieses Fieber ist wirklich gewaltig, so überaus gewaltig. ",
   "sn56.43:2.3": "Gibt es ein anderes Fieber, das noch gewaltiger und schrecklicher ist als dieses?“ ",
-  "sn56.43:2.4": "„Die gibt es, Nonne.“ "
+  "sn56.43:2.4": "„Die gibt es, Nonne.“ ",
+  "sn56.43:3.1": "„Aber Herr, welches ist das?“ "
 }
