Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1465,6 +1465,7 @@
   "pli-tv-kd2:36.4.37": "Regions, another who is learned. ",
   "pli-tv-kd2:36.4.38": "Straightaway, rainy season, observance day, ",
   "pli-tv-kd2:36.4.39": "And purity procedure, relatives; ",
+  "pli-tv-kd2:36.4.40": "Gagga, four and three, two and one, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
