--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1466,6 +1466,7 @@
   "pli-tv-kd2:36.4.38": "Straightaway, rainy season, observance day, ",
   "pli-tv-kd2:36.4.39": "And purity procedure, relatives; ",
   "pli-tv-kd2:36.4.40": "Gagga, four and three, two and one, ",
+  "pli-tv-kd2:36.4.41": "Offense, shared, remembered. ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
