Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1473,6 +1473,7 @@
   "pli-tv-kd2:36.4.45": "And the gathering has not left. ",
   "pli-tv-kd2:36.4.46": "Some have left, all, ",
   "pli-tv-kd2:36.4.47": "And they know, unsure; ",
+  "pli-tv-kd2:36.4.48": " Anxious thinking, ʻIt’s allowable’, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
