Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1478,6 +1478,7 @@
   "pli-tv-kd2:36.4.50": "Newly arrived with resident, ",
   "pli-tv-kd2:36.4.51": "The fourteenth, and the fifteenth again; ",
   "pli-tv-kd2:36.4.52": "The day after, the fifteenth, ",
+  "pli-tv-kd2:36.4.53": "Characteristics, belonging to a Buddhist sect, both. ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
