Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1481,6 +1481,7 @@
   "pli-tv-kd2:36.4.53": "Characteristics, belonging to a Buddhist sect, both. ",
   "pli-tv-kd2:36.4.54": "That has expired, non-observance day, ",
   "pli-tv-kd2:36.4.55": "Except for the purpose of the unity of the sangha; ",
+  "pli-tv-kd2:36.4.56": "These summaries are analyzed, ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
   "pli-tv-kd2:36.4.59": "The chapter on the observance day is finished."
 }
