Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -585,5 +585,6 @@
   "dn34:2.1.137": "This is the fifth inopportune, inconvenient occasion for living the holy life.",
   "dn34:2.1.138": "Or alternatively ...",
   "dn34:2.1.139": "This person is reborn amongst the people of the central country, but he has wrong view and sees things backwards (XXXwhat is the nom of dassano?XXX):",
-  "dn34:2.1.140": "‘What is offered is null. What is sacrificed is null. What is bestowed is null. The fruit and result of good and bad action are null. This world does not exist. A further world does not exist. There is no mother. There is no father. Beings are not reborn (XXXIS THIS A VALID TRANSLATIONXXX). There are no right living, right practicing recluses or brahmans in the world who teach about this world and a further world having seen them personally with direct knowledge.’"
+  "dn34:2.1.140": "‘What is offered is null. What is sacrificed is null. What is bestowed is null. The fruit and result of good and bad action are null. This world does not exist. A further world does not exist. There is no mother. There is no father. Beings are not reborn (XXXIS THIS A VALID TRANSLATIONXXX). There are no right living, right practicing recluses or brahmans in the world who teach about this world and a further world having seen them personally with direct knowledge.’",
+  "dn34:2.1.141": "This is the sixth inopportune, inconvenient occasion for living the holy life."
 }
