Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -595,5 +595,5 @@
   "dn34:2.1.147": "This is the eighth inopportune, inconvenient occasion for living the holy life.",
   "dn34:2.1.148": "These are the eight things that are hard to penetrate.",
   "dn34:2.1.149": "What are the eight things that are to be encouraged?",
-  "dn34:2.1.150": "The eight thoughts of a great person—"
+  "dn34:2.1.150": "The eight thoughts of a great man—"
 }
