Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -598,5 +598,6 @@
   "dn34:2.1.150": "The eight thoughts of a great man—",
   "dn34:2.1.151": "This teaching is for one of few wishes. This teaching is not for one of many wishes.",
   "dn34:2.1.152": "This teaching is for one who is content. This teaching is not for one who is discontent.",
-  "dn34:2.1.153": "This teaching is for one who is disentangled. This teaching is not for one who loves company."
+  "dn34:2.1.153": "This teaching is for one who is disentangled. This teaching is not for one who loves company.",
+  "dn34:2.1.154": "This teaching is for one of resolute energy. This teaching is not for one who is lazy."
 }
