Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -600,5 +600,5 @@
   "dn34:2.1.152": "This is a teaching of contentment. This is not a teaching of discontentment.XXX",
   "dn34:2.1.153": "This is a teaching is for one who is disentangled. This teaching is not for one who loves company.XXXX",
   "dn34:2.1.154": "This teaching is for one of resolute energy. This teaching is not for one who is lazy.XXX",
-  "dn34:2.1.155": "This teaching is for one whose mindfulness is established. This teaching is not for one who is inattentive to mindfulness."
+  "dn34:2.1.155": "This teaching is for one whose mindfulness is established. This teaching is not for one who is inattentive to mindfulness.XXX"
 }
