Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -72,5 +72,6 @@
   "mn7:5.33": "„Šis Palaimintasis yra arahantas, tobulai nušvitęs, įgijęs žinojimą ir gerą elgesį, gerai žengęs, žinantis pasaulį, neprilygstamas tramdytinų žmonių ugdytojas, dievybių ir žmonių mokytojas, nušvitęs, palaimintas.”",
   "mn7:6.1": "Jis turi (tokį) patirtimi grįstą pasitikėjimą Mokymu:",
   "mn7:6.2": "„Gerai išdėstytas Palaimintuoju Mokymas, jis matomas čia ir dabar, nesensta, ragina įsitikinti [jo tikrumu], yra vertas taikymo, turi būti asmeniškai pažintas išmintingaisiais.”",
+  "mn7:7.1": "Jis turi (tokį) patirtimi grįstą pasitikėjimą _saṅgha_:",
   "mn7:7.2": "„Gerai žengia keliu Palaimintojo mokinių bendruomenė. Teisingai žengia keliu Palaimintojo mokinių bendruomenė. Tinkamai žengia keliu Palaimintojo mokinių bendruomenė. Deramai žengia keliu Palaimintojo mokinių bendruomenė, tai yra keturios poros, aštuonių rūšių taurios būtybės. Ši Palaimintojo mokinių bendruomenė yra verta dovanų, verta svetingumo, verta aukų, verta pagarbaus pasveikinimo, neprilygstamas laukas visam pasauliui nusipelnyti gero rezultato.”"
 }
