Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn56.44:2.2": "‚Bevor das Untergeschoss eines Giebelhauses gebaut ist, will ich das Obergeschoss erklimmen.‘ ",
   "sn56.44:2.3": "Das ist nicht möglich. ",
   "sn56.44:2.4": "Ebenso ist es, wenn jemand sagen würde: ",
-  "sn56.44:2.5": "‚Ohne die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig zu verstehen, will ich dem Leiden gänzlich ein Ende machen.‘ "
+  "sn56.44:2.5": "‚Ohne die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig zu verstehen, will ich dem Leiden gänzlich ein Ende machen.‘ ",
+  "sn56.44:2.6": "Das ist nicht möglich. "
 }
