Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.44_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn56.44:4.2": "‚Nachdem das Untergeschoss eines Giebelhauses gebaut ist, will ich das Obergeschoss erklimmen.‘ ",
   "sn56.44:4.3": "Das ist möglich. ",
   "sn56.44:4.4": "Ebenso ist es, wenn jemand sagen würde: ",
-  "sn56.44:4.5": "‚Nachdem ich die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig verstanden habe, will ich dem Leiden gänzlich ein Ende machen.‘ "
+  "sn56.44:4.5": "‚Nachdem ich die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig verstanden habe, will ich dem Leiden gänzlich ein Ende machen.‘ ",
+  "sn56.44:4.6": "Das ist möglich. "
 }
