Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -674,6 +674,7 @@
   "sn-name:2046.sn56.42": "Eine Klippe ",
   "sn-name:2047.sn56.43": "Das große Fieber ",
   "sn-name:2048.sn56.44": "Ein Giebelhaus ",
+  "sn-name:2049.sn56.45": "Haare spalten ",
   "sn-name:2050.sn56.46": "Dunkelheit ",
   "sn-name:2051.sn56.47": "Ein Joch mit einer Öffnung (1) ",
   "sn-name:2052.sn56.48": "Ein Joch mit einer Öffnung (2) ",
