Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.45_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn56.45:1.5": "„Diese Licchaver Jugendlichen sind wirklich geübt, gut geübt, ",
   "sn56.45:1.6": "dass sie Pfeile aus großer Entfernung durch ein kleines Schlüsselloch schießen, Schuss auf Schuss, ohne Fehlschuss.“ ",
   "sn56.45:2.1": "Dann zog Ānanda um Almosen durch Vesālī. Nach dem Essen, als er vom Almosengang zurückkam, ging er zum Buddha, verbeugte sich, setzte sich zur Seite hin und berichtete ihm die Begebenheit. ",
-  "sn56.45:3.1": "„Was denkst du, Ānanda? "
+  "sn56.45:3.1": "„Was denkst du, Ānanda? ",
+  "sn56.45:3.2": "Was ist schwieriger und schwerer zu erreichen: "
 }
