Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -262,5 +262,6 @@
   "mn1:124-146.24": "પરંતુ નિર્વાણને પ્રત્યક્ષ રીતે નિર્વાણ તરીકે જાણી તેઓ પોતાને નિર્વાણ નથી માનતા, પોતાને નિર્વાણમાં નથી માનતા, પોતાને નિર્વાણથી નથી માનતા, નિર્વાણ મારું છે એવું નથી માનતા, નિર્વાણમાં આનંદ નથી લેતા.",
   "mn1:124-146.25": "એ શેના માટે?",
   "mn1:124-146.26": "કારણકે તેઓ મોહના અંતને લીધે મોહથી મુક્ત છે.",
-  "mn1:124-146.27": "અરહંતની છઠ્ઠી ભૂમિપરિચ્છેદની પૂર્ણતા."
+  "mn1:124-146.27": "અરહંતની છઠ્ઠી ભૂમિપરિચ્છેદની પૂર્ણતા.",
+  "mn1:147.1": "અરહંત, સમ્મસંબુધ્ધ, તથાગત પણ પૃથ્વીને પ્રત્યક્ષ રીતે "
 }
