Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.49:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.49:0.2": "5. Eine Klippe "
+  "sn56.49:0.2": "5. Eine Klippe ",
+  "sn56.49:0.3": "49. Sineru, der König der Berge "
 }
