Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -263,5 +263,5 @@
   "mn1:124-146.25": "એ શેના માટે?",
   "mn1:124-146.26": "કારણકે તેઓ મોહના અંતને લીધે મોહથી મુક્ત છે.",
   "mn1:124-146.27": "અરહંતની છઠ્ઠી ભૂમિપરિચ્છેદની પૂર્ણતા.",
-  "mn1:147.1": "અરહંત, સમ્મસંબુધ્ધ, તથાગત પણ પૃથ્વીને પ્રત્યક્ષ રીતે "
+  "mn1:147.1": "અરહંત, સમ્મસંબુધ્ધ, તથાગત પણ પૃથ્વીને પ્રત્યક્ષ રીતે જાણતા હોય છે;"
 }
