Translations by trush23 to translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn1_translation-gu-trush.json
@@ -285,5 +285,6 @@
   "mn1:148-170.16": "જોએલાને જોએલું …",
   "mn1:148-170.17": "સાંભળ્યાને સાંભળ્યુ …",
   "mn1:148-170.18": "ખ્યાલ કરેલાને ખ્યાલ કરેલુ …",
-  "mn1:148-170.19": "જાણેલાને જાણેલુ …"
+  "mn1:148-170.19": "જાણેલાને જાણેલુ …",
+  "mn1:148-170.20": "એકતાને એકતા …"
 }
