Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn1_translation-it-giovannizappa.json
@@ -257,7 +257,7 @@
   "mn1:124-146.23": "Conosce direttamente l'estinzione come estinzione.",
   "mn1:124-146.24": "Ma non si identifica con l'estinzione, non si identifica riguardo all'estinzione, non si identifica come l'estinzione, non si identifica che ‘l'estinzione è mia’, non trae piacere dall'estinzione.",
   "mn1:124-146.25": "Perché questo?",
-  "mn1:124-146.26": "Perché è libero dall'illusione grazie all'eliminazione dell'illusione.",
+  "mn1:124-146.26": "Perché è libero dall'illusione grazie all'esaurimento dell'illusione.",
   "mn1:147.1": "Il Realizzato, il perfetto, il Buddha completamente risvegliato conosce direttamente la terra come terra.",
   "mn1:147.2": "Ma non si identifica con la terra, non si identifica riguardo alla terra, non si identifica come la terra, non si identifica che 'la terra è mia', non trae piacere dalla terra.",
   "mn1:147.3": "Perché questo?",
