Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.50_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.50_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.50:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.50:0.2": "5. Eine Klippe "
+  "sn56.50:0.2": "5. Eine Klippe ",
+  "sn56.50:0.3": "50. Sineru, der König der Berge (2) "
 }
